@@ -1,3 +1,15 @@
+2013-06-10  José Alburquerque  <jaalburquerque@gmail.com>
+
+	Gen Scripts: Minor clean up of the description of the scripts.
+
+	* tools/gen_scripts/gdk_generate_docs.sh:
+	* tools/gen_scripts/gdk_generate_enums.sh:
+	* tools/gen_scripts/gdk_generate_extra_defs.sh:
+	* tools/gen_scripts/gdk_generate_methods.sh:
+	* tools/gen_scripts/gtk_generate_docs.sh:
+	* tools/gen_scripts/gtk_generate_enums.sh:
+	* tools/gen_scripts/gtk_generate_methods.sh:
+
 2013-06-03  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
 
 	Deprecate Gtk::Container::resize_children().
